--- a/OpenAccessMaps/app/build.gradle
+++ b/OpenAccessMaps/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
   compile 'com.google.android.gms:play-services:8.4.0'
   compile 'com.google.dagger:dagger:2.0.2'
   compile 'com.google.dagger:dagger-compiler:2.0.2'
+  compile 'io.reactivex:rxjava:1.1.1'
+  compile 'io.reactivex:rxandroid:1.1.0'
   compile 'com.squareup.retrofit:retrofit:1.9.0'
   compile 'com.squareup.okhttp:okhttp:2.7.4'
   compile 'com.jakewharton:butterknife:7.0.1'
